# python

./: .env_example  .gitignore  10_bibli_os1.py  10_bibli_os2.py  BP.md  BPL.md  LearningPlan.md  README.md  classes_03.py  data.csv  data_ori.csv  depenses.db  example_tests.py  flet.config.json  generator.py  go  go.ps1  gsm.code-workspace  hello.py  input.csv  international_formats.py  main.py  morse.py  names.csv  nombre_mysterieux_best.py  package-lock.json  pyproject.toml  requirements.txt  shop.html  stack.py  start.ps1  test_px_kit.py  test_px_tools.py  tests1.py  tests2.py  tests3.py  uuu.html
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
a_trier/Pour_Moh/: README.md  main.py  requirements.txt
a_trier/a_tester/: zcasino.py
a_trier/bases/: tuple_list.py
a_trier/formaterPy/: idle_black_watcher.py
a_trier/tools/: __init__.py  cls.py
a_trier/various_a_trier/: n5_tests.py  new_autopatoche.py  pypro.py  tbl_test.py
bases/: tuple_list.py
bases/2minuts.py/: main.py
bases/algomius/: 04_lists.py  README.md  main.py  sortie.txt  test.ipynb  uuu.py
bases/basics/: main.py
bases/coder/: README.md  triangle.py
bases/doc/: Dict.py  beautiful4.py  chrono.py  chrono2.py  chronometer.py  classes_04.py  csv_r_and_w.py  generators.py  matplotlib.py  simpleCsvWriter.py  uuuu.py  var_global.py
bases/guru99/: async_sleep.py  counter.py  enumerate_fct.py  format.py  json_fct.py  lambda.py  lib_mysql.py  lib_os.py  lib_selenium.py  main.py  matplot.py  polymorphism.py  queue_show.py  test_python_org_search.py  tests_run.py  timeit_benchmark.py  un-mutable.py
bases/nana/: main.py
bases/nicelydev/: vars.py
bases/pygame/: basics.py  main.py  player.py
breeze/env/: pyvenv.cfg
django/: README.md
django/env/: pyvenv.cfg
django/merchex/: db.sqlite3
doc/: 10_bibli_os3.py  cars_types.md  chrono.py  classes_01.py  main.py  tablo.py
gc7/: boucle.py
gc7/tools/: file.py  uuu.py
gsm/Boosteur/: gc7_venv.py
gsm/flet/: doc_0.py
gsm/flet/Boosteur/: README.md  pyproject.toml
gsm/flet/Boosteur/src/: main.py
gsm/gsm_app/: README.md
gsm/kivy/: journuit.py
modules/fibonacci/: fibo.py  fiboList.py
ocrooms/: README.md
src/: .env_example  README.md  cheatsheet.md  go.ps1  main.py
src/basis/: lv01_essai.py  lv02.py  lv02_ready.py  lv03.py  lv04.py  lv04_uuu.py  lv99_ready.py  scroll_example.py
src/cookbook/: lvAll.py  lvReady.py  main.py
src/devs/: lv00_dev.py  lv00_devs.py  lv01.py  lv01_icons_list.py  lv02_blocs.py  lv03_audio.py  lv05_nbre_x.py  lv0xx_matrice.py  lv10_tutos.py  lv99_matrice.py  templates.py
src/examples/: date_picker.py  lv00_matrice.py  lv03_hello.py  lv04_calc_ui.py  lv05_calc_ui_reusable.py  lv06_async_todo_simple.py  lv06_todo_simple.md  lv06_todo_simple.py  lv07_todo_async.py  lv08_todo.py  lv09_todo.py  lv09_todo_simple.py  lv10_todo.py  lv11_todo.py  lv12_todo_reactive.py  lv12_todo_reactive_official.py  lv20_chat.py  lv21_chat.py  lv22_chat.py  lv23_chat.py  lv24_chat.py  lv24_simus.py  lv25_chat.py  lv30_a1_stack.py  lv30_a2_stack.py  lv30_a3_stack.py  lv30_solitaire.py  lv31_solitaire.py  lv32_solitaire.py  lv33_solitaire.py  lv34_solitaire.py  lv35_solitaire.py  lv36_card.py  lv36_main.py  lv36_solitaire.py  lv37_card.py  lv37_main.py  lv37_slot.py  lv37_solitaire.py  lv38_card.py  (+11 more)
src/fletx_mini_local/: __init__.py  core.py  decorators.py
src/fletx_tuto/: lv00.py  lv01.py  lv02.py  lv03_routing.py  lv04.py
src/tools/: constants.py  gc7.py  home_ui.py  locale_utils.py  screen_utils.py
src/tutos/: DOC_HTML.md  lv01.py  lv02.py  lv03.py  lvXX_matrice.py  package.json  style.css  tableau.html  tableau_matrice.html  vite.config.js
tecks/coder/: turtle.py
tecks/fastapi/: fastapi_intro.md
tecks/screenshot/: screenshot.py
tecks_libs/: django_vs_fastapi.md  technos.md
tecks_libs/Mojo/: .gitignore  README.md  count_py_vs_mojo.py  equilibre-py-vs-python.py  get_ma_var.mojo  main.py  random_list_numpy.py
tecks_libs/Tris/: readme.txt
tecks_libs/collections/: dict_views.ipynb
tecks_libs/db/: main.py  people.db
tecks_libs/descriptors/: main.ipynb
tecks_libs/flet/: flet_30s_positionned.py  main.py
tecks_libs/graphs/: matplot_pies.py
tecks_libs/matplotlib/: basic.py  matplotlib_lib.py  ondes.py  requirements.txt
tecks_libs/mysql/: lib_mysql.py
tecks_libs/pygame/: pygame_lib.py
tecks_libs/pyperclip/: main.py  password.md  password.py
tecks_libs/reflex/: README.md  requirements.txt  rxconfig.py
tecks_libs/screenshot/: .gitignore
tecks_libs/selenium/: lib_selenium.py  web_auto_search.py
tecks_libs/threading/: multithread.py  sleep_fct.py
tools/: BPL.md  Sans nom 1.ods  add_colab_badges.py  chrono.py  clean_c_gc7.ps1  cls.py  drole_emojis.txt  exemple_args.py  globals.py  main.py  main_tools.py  partsLengthFrenchLine.ods  pf_tools.py  sub_tools.py  text_tools.py  tools.py  uuu.json  var4tests.py  width_tests.py
tools/YT_Scrap/: ORGANIGRAMME.md  README_ARCHITECTURE.md  build_bpl.py  cache_utils.py  main.py
tools/various/: width_tests.py
tools/various_a_trier/: animed_text.py  pypro.py  ready4test.py  zeste.py
tools/yt_videos/: ORGANIGRAMME.md  to_see.py
tuto/: castor.py  concours_algorea_2017.py  france-ioi.py  france-ipi.py  main.py  mvts.py  old_algorea.py  old_algorea_chap7.py  old_algorea_chap7_uuu.py  suites.py  uuu.py  uuuthomas_pyPro.py  zeste.py
tuto/algo2017/: grands_plateaux.py  grands_plateaux_cases.py  o1_grands_plateaux.py  o2_dist_min_cases.py
tuto/basics/: join.py  main.py  pathes.py  sorts_tables_tools_1_2.py  sorts_tables_tools_2_2.py
tuto/dataclasses/: main.py
tuto/euler/: pb001.py  pb004.py  (+3 more)
tutos/: main.py  script_template.py  zeste.py
(+600 files in other folders)
