[project]
name = "Py"
version = "0.0.1"
description = "Py Learning"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Aadminli", email = "GrCOTE7@gmail.com" }]
dependencies = [
    "flet",
    "pymox_kit",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = ["flet[all]"]


[tool.flet]
org = "com.mycompany"
product = "Py"
company = "COTE"
copyright = "Copyright (C) 2026 by GrCOTE7"
compile.app = true
compile.packages = true
compile.cleanup = true
build_number = 1

[tool.flet.app]
# path = "."
# path = "tools"
# path = "tutos/flet"
path = "src" # Mes essais Flets
assets_dir = "assets"


[tool.flet.android]
split_per_abi = true
min_sdk_version = 24
target_sdk_version = 35


[tool.flet.splash]
android = false


# [tool.flet.android.permission]
# "android.permission.CAMERA" = true

# [tool.flet.android.feature] # --android-features
# "android.hardware.camera" = true
