[project]
name = "Py"
version = "0.0.1"
description = "Py Learning"
readme = "README.md"
requires-python = ">=3.13,<3.14"
keywords = [
    "flet",
    "fletx",
    "reactive state",
    "routing",
    "dependency injection",
]
authors = [{ name = "Aadminli", email = "GrCOTE7@gmail.com" }]

dependencies = [
    "flet==0.84.0",
    "pymox_kit",
    "tabulate",
    "yt-dlp",
]

# [project.optional-dependencies]
# dev = ["flet[all]"]

# Optional deps
[project.optional-dependencies]
dev = [
    "flet-cli==0.84.0",
    "flet-desktop==0.84.0",
    "flet-web==0.84.0",
    "pytest>=8.4.0",
]

# Dependency groups for FletX development
[dependency-groups]
dev = [
    "flet-cli==0.84.0",
    "flet-desktop==0.84.0",
    "flet-web==0.84.0",
    "black",
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "mkdocs>=1.6.1",
    "setuptools>=80.8.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.flet]
org = "com.mycompany"
product = "Py"
company = "COTE"
copyright = "Copyright (C) 2026 by GrCOTE7"
compile.app = true
compile.packages = true
compile.cleanup = true
build_number = 1

[tool.flet.app]
# path = "."
# path = "tools"
# path = "tutos/flet"
path = "src"          # Mes essais Flets
assets_dir = "assets"


[tool.flet.android]
split_per_abi = true
min_sdk_version = 24
target_sdk_version = 35


[tool.flet.splash]
android = false


# [tool.flet.android.permission]
# "android.permission.CAMERA" = true

# [tool.flet.android.feature] # --android-features
# "android.hardware.camera" = true
