[project]
name = "Py"
version = "0.0.1"
description = "Py Learning"
readme = "README.md"
# requires-python = ">=3.13,<3.15"
requires-python = ">=3.13"
keywords = [
    "flet",
    "fletx",
    "reactive state",
    "routing",
    "dependency injection",
]
authors = [{ name = "Aadminli", email = "GrCOTE7@gmail.com" }]

dependencies = [
    "cryptography>=46.0.7",
    "flet",
    "flet-audio",
    "keras>=3.14.1",
    "lib>=4.0.0",
    "lorem>=0.1.1",
    "matplot>=0.1.9",
    "pandas>=3.0.3",
    "pymox_kit",
    "pyperclip>=1.11.0",
    "scapy>=2.7.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tabulate",
    "tensorflow>=2.21.0",
    "yt_dlp",
]

# Optional deps
[project.optional-dependencies]
dev = [
    "flet-cli",
    "flet-desktop",
    "flet-web",
    "pytest>=8.4.0",
]

# Dependency groups for FletX development
[dependency-groups]
dev = [
    "flet-cli",
    "flet-desktop",
    "flet-web",
    "black",
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "mkdocs>=1.6.1",
    "setuptools>=80.8.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.flet]
org = "com.mycompany"
product = "Py"
company = "COTE"
copyright = "Copyright (C) 2026 by GrCOTE7"
compile.app = true
compile.packages = true
compile.cleanup = true
build_number = 1

[tool.flet.app] 

# App à lancer
# path = "."
# path = "tools"
# path = "tutos/flet"
path = "src"          # Mes essais Flets

assets_dir = "assets"


[tool.flet.android]
split_per_abi = true
min_sdk_version = 24
target_sdk_version = 35


[tool.flet.splash]
android = false


# [tool.flet.android.permission]
# "android.permission.CAMERA" = true

# [tool.flet.android.feature] # --android-features
# "android.hardware.camera" = true
