[project]
name = "Boosteur"
version = "0.00.001"
description = "Boosteur.com"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aadminli", email = "GrCOTE7@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Boosteur"

# company name to display in about app dialogs
company = "COTE"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by GrCOTE7"

compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile

build_number=1

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 35

[tool.flet.splash]
android = false
